Fix suggested actions pushing behind header (#771)
* bugfix(SuggestedActions): Fixes first history message hiding behind the header when SuggestActions are shown

* merge for cherry pick

* resolve for cherry pick

* Scroll to bottom check only when suggested actions first show up

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -160,6 +160,7 @@
 
     .wc-message-pane.show-actions {
         .wc-message-groups {
+            top: $headerTotalHeight + $actionsHeight;
             transform: translateY(-$actionsHeight);
         }
         .wc-suggested-actions {
